--- a/less/index.less
+++ b/less/index.less
@@ -54,6 +54,80 @@ table {
 }
 
 html, body {
-    height: 100%;
+	height: 100%;
 }
 
+
+// Variables
+@fontColor: ghostwhite;
+@phone: (max-width: 500px);
+
+.container {
+	display: flex;
+	flex-direction: column;
+	margin: 10px 30px 10px 30px;
+}
+
+header {
+	nav{
+		display: flex;
+		flex-direction: row;
+		justify-content: space-evenly; 
+		margin: 20px;	
+		margin-left: 600px;
+		margin-bottom: 30px;	
+	}
+	a { 
+		justify-content: flex-end;
+		font-size: 18px;
+		color: gray;
+		text-decoration: none;
+	}
+	
+		a:hover{
+			text-decoration: underline;
+			font-size: 20px;
+			width: 30px
+			height: 20px;
+			background: orange;
+			color: @fontColor;
+			text-decoration: none;  
+		}
+}
+
+header nav a {
+	@phone {
+			margin: 0;
+	}
+}
+
+.gradient {
+	background-image: linear-gradient(to right, #242582, #F64C72, orange);
+	padding: 20px;
+	}
+
+	h3 {
+		font-size: 22px;
+		margin-bottom: 10px;
+		color: @fontColor;
+	}
+
+	.myName {
+		font-family: 'Orbitron', sans-serif;
+		font-size: 60px;
+		color: @fontColor;
+		margin-bottom: 10px;	
+	}
+
+	img {
+	width: 30%;
+    height: 70%;
+    border: 1px solid @fontColor;
+    margin-bottom: 40px;
+    box-shadow: 6px 10px 30px 1px;
+	}
+
+.middle-content .text-container {
+	display: flex;
+	flex-direction: row;	
+}
